--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-    <a class="navbar-brand" href="{% url 'blog-home' %}"><b>Savchuk News</b></a>
+    <a class="navbar-brand" href="{% url 'blog-home' %}"><b>BLOG</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,16 +21,6 @@
         </li>
 
       </ul>
-    </div>
-    <div class="navbar-nav">
-        {% if user.is_authenticated%}
-        <a href="#" class="btn btn-outline-secondary mr-2">Добавить статью</a>
-        <a href="#" class="btn btn-outline-secondary mr-2">Профиль</a>
-        <a href="#" class="btn btn-outline-secondary mr-2"> Выйти</a>
-        {%else%}
-        <a href="#" class="btn btn-outline-secondary mr-2"> Регистрация</a>
-        <a href="#" class="btn btn-outline-secondary "> Войти</a>
-        {%endif%}
     </div>
   </nav>
     <main class="container">
