Authorization and logout

--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -22,6 +22,18 @@
 
       </ul>
     </div>
+    <div class="navbar-nav">
+
+        {% if user.is_authenticated%}
+        <a href="" class="btn btn-outline-secondary mr-2">Добавить статью</a>
+        <a href="{% url 'profile' %}" class="btn btn-outline-secondary mr-2">Профиль</a>
+        <a href="{% url 'exit' %}" class="btn btn-outline-secondary mr-2"> Выйти</a>
+        {%else%}
+        <a href="{% url 'reg' %}" class="btn btn-outline-secondary mr-2"> Регистрация</a>
+        <a href="{% url 'auth' %}" class="btn btn-outline-secondary "> Войти</a>
+        {%endif%}
+
+    </div>
   </nav>
     <main class="container">
        <div class="row">
