--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -9,6 +9,7 @@
     <button type="submit" class="btn btn-outline-warning"> Зарегистрироваться</button>
     </form>
     <hr>
+    Уже зарегистрированы? <a href="{% url 'auth' %}" >Войти в личный кабинет</a>
 </div>
     {%endblock main_section%}
 
