--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,7 +3,14 @@
 {%block main_section%}
 <div class="form-section">
     <h2>Кабинет пользователя</h2>
-    <h2>{{user.username}}</h2>
+    <div class="media text-muted pt-3">
+    <img class="mr-2 rounded" style="width: 64px; height: 64px;" src="{{ user.profile.img.url }}">
+      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+        <strong class="d-block text-gray-dark">@{{user.username}}</strong>
+          <b>Email: </b> {{user.email}}
+      </p>
+    </div>
+    </form>
 </div>
     {%endblock main_section%}
 
