--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -2,6 +2,52 @@ body {
 background: #fafafa
 }
 
+footer{
+    padding: 30px;
+    background: #333a41;
+    color: #f1efef;
+    float: left;
+    width:100%;
+    margin-top:25px;
+}
+
+footer a {
+    color: #788c9e
+}
+
+footer a:hover{
+    border-color:#79b0e2
+}
 .alert-light {
 border-color: #bfbfbf
 }
+
+.img{
+max-width:100%!important}
+
+.user_image {
+width: 64px;
+height: 64px;
+border-radius: 50%;
+margin-right: 10px;
+margin-left: 20px;
+}
+
+.form-section{
+background: #fff;
+padding: 20px;
+border: 1px solid silver;
+box-sizing: border-box;
+width: 100%;
+-webkit-box-shadow: 0 2px 3px 0 rgba(74,74,74,.21);
+-moz-box-shadow: 0 2px 3px 0 rgba(74,74,74,.21);
+box-shadow: 0 2px 3px 0 rgba(74,74,74,.21);
+}
+
+
+.form-section > h2 {
+color: #b38a22;
+margin-bottom: 10px;
+}
+
+
