Create, delete and edit posts.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -21,6 +21,7 @@
 {% endif %}
          </div>
     </div>
+    <a href="{% url 'news-detail' post.id %}" class="btn btn-outline-warning">Читать далее</a>
         </div>
 {% endfor %}
 {% endblock main_section %}
