--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -25,7 +25,7 @@
     <div class="navbar-nav">
 
         {% if user.is_authenticated%}
-        <a href="" class="btn btn-outline-secondary mr-2">Добавить статью</a>
+        <a href="{%url 'news-add' %}" class="btn btn-outline-secondary mr-2">Добавить статью</a>
         <a href="{% url 'profile' %}" class="btn btn-outline-secondary mr-2">Профиль</a>
         <a href="{% url 'exit' %}" class="btn btn-outline-secondary mr-2"> Выйти</a>
         {%else%}
