--- a/blog/templates/blog/user_news.html
+++ b/blog/templates/blog/user_news.html
@@ -1,5 +1,7 @@
 {% extends 'blog/main.html' %}
 {%block main_section%}
+    <h2>Все статьи от автора {{view.kwargs.username}}</h2>
+    <h4>Количество: {{page_obj.paginator.count}}</h4>
   {% for post in news %}
 <div class="alert alert-light">
     <h1>{{post.title}}</h1>
@@ -41,3 +43,8 @@
 
 {%endif%}
 {%endblock main_section%}
+
+
+
+{%block aside_news_section%}
+{%endblock aside_news_section%}
